--- a/tools/FogML_SDK_Tools_Zephyr_LwM2M.ipynb
+++ b/tools/FogML_SDK_Tools_Zephyr_LwM2M.ipynb
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -47,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "0i0v8FX3g91Q"
       },
@@ -90,7 +90,7 @@
       "metadata": {
         "id": "-YAxSmalzVy_"
       },
-      "execution_count": 17,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -128,7 +128,7 @@
         "id": "C0PEobsNv_wp",
         "outputId": "80889be6-9e00-4293-d2ca-4490ea9b58c8"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,7 +142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "AGwuKgYEg34S",
         "colab": {
@@ -184,7 +184,7 @@
       "metadata": {
         "id": "7PCqY10ipcx-"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -194,6 +194,58 @@
       ],
       "metadata": {
         "id": "gCN5nxTTLwSs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Class Labels Generation"
+      ],
+      "metadata": {
+        "id": "sdS09gQzw9YQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "labels_pattern = 'const char* FOGML_LABELS[] = {{{}}};'\n",
+        "count_pattern = 'const int FOGML_LABELS_COUNT = {};'\n",
+        "\n",
+        "label = '\"' + LABELS[0] + '\"'\n",
+        "\n",
+        "for i in range(1,len(LABELS)):\n",
+        "  label += \",\"\n",
+        "  label += '\"' + LABELS[i] + '\"'\n",
+        "\n",
+        "print(labels_pattern.format(label))\n",
+        "print(count_pattern.format(len(LABELS)))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kfO3TYMpxGuZ",
+        "outputId": "b2dd5087-befc-4ddc-9fbd-92cd9b77dce2"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "const char* FOGML_LABELS[] = {\"IDLE\",\"CIRCLE\",\"SNAKE\",\"UP DOWN\"};\n",
+            "const int FOGML_LABELS_COUNT = 4;\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Copy and paste generated lines to the `fogml_config.h` file in lines below `//CLASSIFICATION` tag."
+      ],
+      "metadata": {
+        "id": "f7fO1w8E1kxQ"
       }
     },
     {
@@ -238,7 +290,7 @@
         "id": "ozcNCRfDJ2T9",
         "outputId": "9505a0be-9e05-44f6-8552-d2c60ff973db"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -258,7 +310,6 @@
   "metadata": {
     "colab": {
       "collapsed_sections": [],
-      "name": "FogML_SDK_Tools_Zephyr.ipynb",
       "provenance": []
     },
     "kernelspec": {
